--- a/examples/stochastic_SCAMPy/Project.toml
+++ b/examples/stochastic_SCAMPy/Project.toml
@@ -1,10 +1,13 @@
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EnsembleKalmanProcesses = "aa8a2aa5-91d8-4396-bcef-d4f2ec43552d"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
