--- a/examples/SCAMPy/Project.toml
+++ b/examples/SCAMPy/Project.toml
@@ -6,6 +6,7 @@ Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
